# polymorphic_enum

./: Cargo.toml  README.md
src/: lib.rs
tests/: test.rs  test_macros.rs
