[package]
name = "polymorphic_enum"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0"
description = "Automatically wrap enum variant data in a struct. Implement a given trait for the enum that delegates to the structs. Also implement From and To to convert between the enum and the structs."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.29", features = ["full", "extra-traits"] }
